<resources>
    <string name="app_name">Amit Pattal</string>
    <string name="welcome">Welcome</string>
    <string name="CAKES">CAKES</string>
    <string name="pastry">PASTRIES</string>
    <string name="decoratives">DECORATIVES</string>
    <string name="title">VANILLA</string>
    <string name="secondary_text">-@ 400-600/K.G</string>
    <string name="supporting_text">Custom vanilla/pineapple/chocolate/redvelvet/brownish cake.</string>
    <string name="action_1">Order Now</string>
    <string name="action_2">Subscribe</string>
    <string name="butterscotch">BUTTERSCOTCH</string>
    <string name="blue_truffle">BLUE TRUFFLE</string>
    <string name="multi_flavoured">MULTI-FLAVOURED</string>
    <string name="mango">MANGO-VANILLA</string>
    <string name="black_forest">BLACK-FOREST</string>
    <string name="pineapple">PINEAPPLE</string>
    <string name="choco_vanilla">CHOCO-VANILLA</string>
    <string name="oreo_heart">OREO-HEART</string>
    <string name="chocolate_truffle">CHOCOLATE-TRUFFLE</string>
    <string name="double_chocolate">DOUBLE CHOCOLATE</string>
    <string name="brownish_heart">BROWNISH HEART</string>
    <string name="dark_chocolate_truffle">DARK-CHOCOLATE TRUFFLE</string>
    <string name="vanilla_red_velvet">VANILLA-RED.VELVET</string>
    <string name="choco_vanilla_red_velvet">CHOCO.VANILLA-RED.VELVET</string>
    <string name="choco_strawberry">CHOCO-STRAWBERRY</string>
    <string name="strawberry_jelly">STRAWBERRY-JELLY</string>
    <string name="pure_red_velvet">PURE.RED-VELVET</string>
    <string name="vanilla_strawberry">VANILLA-STRAWBERRY</string>
    <string name="mango_jelly">MANGO-JELLY</string>
    <string name="butter_strawberry">BUTTER-STRAWBERRY</string>
    <string name="butter_jelly_oreo">BUTTER.JELLY-OREO</string>
    <string name="the_minion_cake">THE MINION CAKE</string>
    <string name="butterscotch_jelly">BUTTERSCOTCH-JELLY</string>
    <string name="butterscotch_gems">BUTTERSCOTCH-GEMS</string>
    <string name="white_forest">WHITE FOREST</string>
    <string name="white_chocolate_spl_cake">WHITE CHOCOLATE SPL. CAKE</string>
    <string name="black_current_jelly">BLACK CURRENT JELLY</string>
    <string name="multi_flavoured_floor_cake">MULTI-FLAVOURED FLOOR CAKE</string>
    <string name="pineapple_pastry">PINEAPPLE PASTRY</string>
    <string name="_15_20_pcs">-@15-20/PCS</string>
    <string name="blackforest_pastry">BLACKFOREST PASTRY</string>
    <string name="mango_pastry">MANGO PASTRY</string>
    <string name="butterscotch_pastry">BUTTERSCOTCH PASTRY</string>
    <string name="strawberry_pastry">STRAWBERRY PASTRY</string>
    <string name="brownish_pastry">BROWNISH PASTRY</string>
    <string name="_30_40_pcs">-@30-40/PCS</string>
    <string name="amit">AMIT</string>
    <string name="pattal">PATTAL</string>
    <string name="radiobutton">RadioButton</string>
    <string name="_3_k_g">3 K.G</string>
    <string name="_2_k_g">2 K.G</string>
    <string name="_1_k_g">1 K.G</string>
    <string name="cake_selected">Cake Selected</string>
</resources>