<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="40dp"
    tools:context=".OrderNow">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="383dp"
        android:layout_height="127dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/paytm1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="310dp"
        android:layout_height="70dp"
        android:paddingLeft="0dp"
        android:paddingTop="20dp"
        android:text="Cake Name"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:paddingStart="70dp"
        tools:ignore="RtlSymmetry" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/_1_k_g" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2_k_g" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_3_k_g" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="113dp"
        android:layout_height="61dp"
        android:paddingLeft="0dp"
        android:text="Total :-"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="219dp"
        android:layout_height="63dp"
        android:text="500"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <Button
        android:id="@+id/button"
        android:layout_width="202dp"
        android:layout_height="56dp"
        android:background="#3A90D5"
        android:shadowColor="#5CA8EC"
        android:text="PAY"
        android:textSize="24sp"
        app:backgroundTint="#3A90D5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        app:layout_constraintVertical_bias="0.336" />
</androidx.constraintlayout.widget.ConstraintLayout>