<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/long1">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <!--
            In the above cardview widget
            cardelevation property will give elevation to your card view
            card corner radius will provide radius to your card view
            card background color will give background color to your card view
            card max elevation will give the cardview maximum elevation
            card prevent corner overlap will add padding to CardView on v20 and before to prevent intersections between the Card content and rounded corners.
            card use compact padding will add padding in API v21+ as well to have the same measurements with previous versions.
            below are the two widgets imageview and text view we are displaying inside our card view.
            -->

            <ImageView
                android:id="@+id/img"
                android:layout_width="140dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logophoto"
                android:layout_marginRight="5dp" />

            <TextView
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/lobser"
                android:text="@string/amit"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/lobser"
                android:text="@string/pattal"
                android:textSize="30sp"
                android:textStyle="bold" />


        </androidx.cardview.widget.CardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="110dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardm1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardBackgroundColor="#FFFFF0"
                    android:layout_margin="8dp">
                <ImageView
                    android:id="@+id/cakes"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_horizontal"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:onClick="CAKES"
                    android:scaleType="fitStart"
                    android:src="@drawable/dora"
                    android:textAlignment="center" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/textView2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="296dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="#FFFFF0"
                    android:fontFamily="@font/lobser"
                    android:gravity="center_horizontal"
                    android:onClick="CAKES"
                    android:text="@string/CAKES"
                    android:textAlignment="center"
                    android:textColor="#FF0000"
                    android:textSize="40sp"
                    android:textStyle="italic"
                    android:visibility="visible"
                    tools:visibility="visible" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardm2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#FFFFF0"
                    android:layout_margin="8dp">
                <ImageView
                    android:id="@+id/pastry"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_horizontal"
                    android:onClick="Pastry"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:paddingStart="45dp"
                    android:paddingLeft="55dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/pastry"
                    android:textAlignment="center" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/textpastry"
                    android:layout_width="296dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/lobser"
                    android:gravity="center_horizontal"
                    android:background="#FFFFF0"
                    android:paddingBottom="10dp"
                    android:text="@string/pastry"
                    android:onClick="Pastry"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textAlignment="center"
                    android:textColor="#FF0000"
                    android:textSize="40sp"
                    android:textStyle="italic"
                    android:visibility="visible"
                    tools:visibility="visible" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardm3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#FFFFF0"
                    android:layout_margin="8dp">
                <ImageView
                    android:id="@+id/decoratives"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_horizontal"
                    android:onClick="decoratives"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:paddingStart="25dp"
                    android:paddingLeft="25dp"
                    android:paddingTop="20dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/decoratives"
                    android:textAlignment="center" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/decorationtext"
                    android:layout_width="296dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/lobser"
                    android:gravity="center_horizontal"
                    android:background="#FFFFF0"
                    android:paddingBottom="20dp"
                    android:text="@string/decoratives"
                    android:onClick="decoratives"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textAlignment="center"
                    android:textColor="#FF0000"
                    android:textSize="40sp"
                    android:textStyle="italic"
                    android:visibility="visible"
                    tools:visibility="visible" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>